--- a/index.html
+++ b/index.html
@@ -5,92 +5,381 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Accessible Menu</title>
-  </head>
-  <body>
-    <nav id="block-main-menu" class="block--menu" aria-label="Main Navigation">
-      <ul class="menu">
-        <li>
-          <a href="#">Item 0</a>
-        </li>
-        <li>
-          <button aria-expanded="false" aria-controls="submenu-1">
-            Item 1
-          </button>
-          <ul class="menu" id="submenu-1">
-            <li>
-              <a href="#">Sub Item 1.1</a>
-            </li>
-            <li>
-              <a href="#">Sub Item 1.2</a>
-            </li>
-            <li>
-              <a href="#">Sub Item 1.3</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <button aria-expanded="false" aria-controls="submenu-2">
-            Item 2
-          </button>
-          <ul class="menu" id="submenu-2">
-            <li>
-              <a href="#">Sub Item 2.1</a>
-            </li>
-            <li>
-              <button aria-expanded="false" aria-controls="submenu-2-2">
-                Sub Item 2.2
-              </button>
-              <ul class="menu" id="submenu-2-2">
-                <li>
-                  <a href="#">Sub Item 2.2.1</a>
-                </li>
-                <li>
-                  <a href="#">Sub Item 2.2.2</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">Sub Item 2.3</a>
-            </li>
-            <li>
-              <button aria-expanded="false" aria-controls="submenu-2-4">
-                Sub Item 2.4
-              </button>
-              <ul class="menu" id="submenu-2-4">
-                <li>
-                  <a href="#">Sub Item 2.4.1</a>
-                </li>
-                <li>
-                  <a href="#">Sub Item 2.4.2</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">Item 3</a>
-        </li>
-      </ul>
-    </nav>
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
-    <script src="accessible-menu.js"></script>
-    <script>
-      $("#block-main-menu").accessibleMenu({
-        animation: "slide"
-      });
-    </script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <style>
-      [id*="main-menu"] ul {
+      body {
+        margin: 4rem 0 10rem 0;
+      }
+      h1 {
+        text-align: center;
+        margin-bottom: 2rem;
+      }
+      h2 {
+        margin: 1rem 0 2rem 0;
+      }
+      code {
+        max-height: 25rem;
+        margin-bottom: 2rem;
+      }
+      p {
+        margin-bottom: 2rem;
+      }
+      #demo-menu > ul {
+        margin-left: 0!important;
+      }
+      #demo-menu ul {
         list-style-type: none;
         margin: 0 0 1rem 2rem;
         padding: 0 0 0 1rem;
         background: rgba(0, 0, 0, 0.05);
         border-left: 2px solid rgba(0, 0, 255, 0.5);
       }
-      [id*="main-menu"] ul li {
+      #demo-menu ul li {
         padding: 0.5rem 0;
       }
+      .hljs{display:block;overflow-x:auto;padding:.5em;background:#23241f}.hljs,.hljs-tag,.hljs-subst{color:#f8f8f2}.hljs-strong,.hljs-emphasis{color:#a8a8a2}.hljs-bullet,.hljs-quote,.hljs-number,.hljs-regexp,.hljs-literal,.hljs-link{color:#ae81ff}.hljs-code,.hljs-title,.hljs-section,.hljs-selector-class{color:#a6e22e}.hljs-strong{font-weight:bold}.hljs-emphasis{font-style:italic}.hljs-keyword,.hljs-selector-tag,.hljs-name,.hljs-attr{color:#f92672}.hljs-symbol,.hljs-attribute{color:#66d9ef}.hljs-params,.hljs-class .hljs-title{color:#f8f8f2}.hljs-string,.hljs-type,.hljs-built_in,.hljs-builtin-name,.hljs-selector-id,.hljs-selector-attr,.hljs-selector-pseudo,.hljs-addition,.hljs-variable,.hljs-template-variable{color:#e6db74}.hljs-comment,.hljs-deletion,.hljs-meta{color:#75715e}
+      #my-menu {
+        margin: 3rem 0;
+      }
+      #my-menu ul {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+      }
+      #my-menu li {
+        position: relative;
+        margin: 0;
+        padding: 0;
+      }
+      #my-menu button {
+        border: 0;
+        background: transparent;
+        padding: 0;
+      }
+      #my-menu button[aria-expanded="false"]:after {
+        content: "⯆";
+        display: inline-block;
+        color: #333;
+      }
+      #my-menu button[aria-expanded="true"]:after {
+        content: "⯅";
+        display: inline-block;
+        color: #333;
+      }
+      #my-menu ul {
+        background: #efefef;
+      }
+      #my-menu > ul > li {
+        display: inline-block;
+      }
+      #my-menu > ul > li > a,
+      #my-menu > ul > li > button {
+        display: block;
+        padding: 1rem 2rem;
+      }
+      #my-menu > ul > li > ul {
+        position: absolute;
+        width: 18rem;
+      }
+      #my-menu ul li ul li {
+        display: block;
+        padding: .5rem 1rem;
+      }
+      #my-menu [id^="sub"]{
+        background: #DBDBDB;
+      }
     </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>Accessible Menu jQuery plugin</h1>
+
+          <p>
+            This plugin create with the <strong><u>right</u></strong> HTML a fully accessible menu based
+            on the example of the W3C:
+            <a href="https://www.w3.org/TR/wai-aria-practices/examples/disclosure/disclosure-navigation.html#ex_label">Example Disclosure for Navigation Menus</a>.
+          </p>
+
+          <h2>Raw example:</h2>
+          <nav id="demo-menu" aria-label="Demo Navigation">
+            <ul>
+              <li>
+                <a href="#">Item 1</a>
+              </li>
+              <li>
+                <button aria-expanded="false" aria-controls="submenu-2">
+                  Item 2
+                </button>
+                <ul id="submenu-2">
+                  <li>
+                    <a href="#">Item 2.1</a>
+                  </li>
+                  <li>
+                    <a href="#">Item 2.2</a>
+                  </li>
+                  <li>
+                    <a href="#">Item 2.3</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <button aria-expanded="false" aria-controls="submenu-3">
+                  Item 3
+                </button>
+                <ul id="submenu-3">
+                  <li>
+                    <a href="#">Item 3.1</a>
+                  </li>
+                  <li>
+                    <button aria-expanded="false" aria-controls="submenu-3-2">
+                      Item 3.2
+                    </button>
+                    <ul id="submenu-3-2">
+                      <li>
+                        <a href="#">Item 3.2.1</a>
+                      </li>
+                      <li>
+                        <a href="#">Item 3.2.2</a>
+                      </li>
+                      <li>
+                        <a href="#">Item 3.2.3</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#">Item 3.3</a>
+                  </li>
+                  <li>
+                    <button aria-expanded="false" aria-controls="submenu-3-4">
+                      Item 3.4
+                    </button>
+                    <ul id="submenu-3-4">
+                      <li>
+                        <a href="#">Item 3.4.1</a>
+                      </li>
+                      <li>
+                        <a href="#">Item 3.4.2</a>
+                      </li>
+                      <li>
+                        <button
+                          aria-expanded="false"
+                          aria-controls="submenu-3-4-3"
+                        >
+                          Item 3.4
+                        </button>
+                        <ul id="submenu-3-4-3">
+                          <li>
+                            <a href="#">Item 3.4.3.1</a>
+                          </li>
+                          <li>
+                            <a href="#">Item 3.4.3.2</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#">Item 3.4.4</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">Item 4</a>
+              </li>
+              <li>
+                <button aria-expanded="false" aria-controls="submenu-5">
+                  Item 5
+                </button>
+                <ul id="submenu-5">
+                  <li>
+                    <a href="#">Item 5.1</a>
+                  </li>
+                  <li>
+                    <a href="#">Item 5.2</a>
+                  </li>
+                  <li>
+                    <a href="#">Item 5.3</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+
+          <h2>Code</h2>
+          <p>HTML:</p>
+<pre>
+<code class="html">&lt;nav id=&quot;my-menu&quot; aria-label=&quot;My menu&quot;&gt;
+  &lt;ul&gt;
+    &lt;li&gt;
+      &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+    &lt;/li&gt;
+    &lt;li&gt;
+      &lt;button aria-expanded=&quot;false&quot; aria-controls=&quot;submenu-2&quot;&gt;
+      Dropdown
+      &lt;/button&gt;
+      &lt;ul id=&quot;submenu-2&quot;&gt;
+        &lt;li&gt;
+          &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+        &lt;/li&gt;
+        &lt;li&gt;
+          &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+        &lt;/li&gt;
+        &lt;li&gt;
+          &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+        &lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/li&gt;
+    &lt;li&gt;
+      &lt;button aria-expanded=&quot;false&quot; aria-controls=&quot;submenu-3&quot;&gt;
+      Dropdown
+      &lt;/button&gt;
+      &lt;ul id=&quot;submenu-3&quot;&gt;
+        &lt;li&gt;
+          &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+        &lt;/li&gt;
+        &lt;li&gt;
+          &lt;button aria-expanded=&quot;false&quot; aria-controls=&quot;submenu-3-2&quot;&gt;
+          Dropdown
+          &lt;/button&gt;
+          &lt;ul id=&quot;submenu-3-2&quot;&gt;
+            &lt;li&gt;
+              &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+            &lt;/li&gt;
+            &lt;li&gt;
+              &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+            &lt;/li&gt;
+          &lt;/ul&gt;
+        &lt;/li&gt;
+        &lt;li&gt;
+          &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+        &lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/li&gt;
+    &lt;li&gt;
+      &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+    &lt;/li&gt;
+    &lt;li&gt;
+      &lt;button aria-expanded=&quot;false&quot; aria-controls=&quot;submenu-5&quot;&gt;
+      Dropdown
+      &lt;/button&gt;
+      &lt;ul id=&quot;submenu-5&quot;&gt;
+        &lt;li&gt;
+          &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+        &lt;/li&gt;
+        &lt;li&gt;
+          &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+        &lt;/li&gt;
+        &lt;li&gt;
+          &lt;a href=&quot;#&quot;&gt;Link&lt;/a&gt;
+        &lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/nav&gt;</code></pre>
+
+          <p>The <code>id="submenu-x"</code> and <code>aria-control="submenu-x"</code> are just suggestions. The script only watch the HTML structure and the <code>aria-expanded</code>.</p>
+
+          <p>JS:</p>
+<pre><code class="js">$("#my-menu").accessibleMenu();</code></pre>
+
+          <p>At the moment there's only one option <code>animation</code>. By default it's <code>none</code>, but there's two others options: <code>fade</code> and <code>slide</code></p>
+
+          
+<pre><code class="js">$("#my-menu").accessibleMenu({
+  animation: 'slide'
+});</code></pre>
+
+        <h2>Fully working example with slide and some CSS</h2>
+
+        <nav id="my-menu" aria-label="My menu">
+          <ul>
+            <li>
+              <a href="#">Link</a>
+            </li>
+            <li>
+              <button aria-expanded="false" aria-controls="sub-menu-2">
+              Dropdown
+              </button>
+              <ul id="sub-menu-2">
+                <li>
+                  <a href="#">Link</a>
+                </li>
+                <li>
+                  <a href="#">Link</a>
+                </li>
+                <li>
+                  <a href="#">Link</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <button aria-expanded="false" aria-controls="sub-menu-3">
+              Dropdown
+              </button>
+              <ul id="sub-menu-3">
+                <li>
+                  <a href="#">Link</a>
+                </li>
+                <li>
+                  <button aria-expanded="false" aria-controls="sub-menu-3-2">
+                  Dropdown
+                  </button>
+                  <ul id="sub-menu-3-2">
+                    <li>
+                      <a href="#">Link</a>
+                    </li>
+                    <li>
+                      <a href="#">Link</a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="#">Link</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Link</a>
+            </li>
+            <li>
+              <button aria-expanded="false" aria-controls="sub-menu-5">
+              Dropdown
+              </button>
+              <ul id="sub-menu-5">
+                <li>
+                  <a href="#">Link</a>
+                </li>
+                <li>
+                  <a href="#">Link</a>
+                </li>
+                <li>
+                  <a href="#">Link</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        </div>
+      </div>
+    </div>
+    <script src="//cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/highlight.min.js"></script>
+    <script src="accessible-menu.js"></script>
+    <script>
+    $( document ).ready(function() {
+      hljs.initHighlightingOnLoad();
+      $("#demo-menu").accessibleMenu();
+      $("#my-menu").accessibleMenu({
+        animation: 'slide'
+      });
+    });
+    </script>
   </body>
 </html>
