--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           </nav>
 
           <h2>Code</h2>
-          <p>HTML:</p>
+          <p>HTML structure example:</p>
 <pre>
 <code class="html">&lt;nav id=&quot;my-menu&quot; aria-label=&quot;My menu&quot;&gt;
   &lt;ul&gt;
