--- a/index.html
+++ b/index.html
@@ -377,6 +377,26 @@
             </li>
           </ul>
         </nav>
+
+        <h2>Tips</h2>
+
+        <ol>
+          <li>Always make your <code>a</code> and <code>button</code> in display block</li>
+          <li>Style with <code>[aria-expanded="true|false"]</code> don't override the script to add active class</li>
+        </ol>
+
+        <h2>Browser support</h2>
+
+        <p>All modern browsers and IE >=9.</p>
+
+        <h2>Dependencies</h2>
+
+        <p>jQuery</p>
+
+        <h2>License</h2>
+
+        <p>Do what you want with it.</p>
+
         </div>
       </div>
     </div>
