--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
     <script src="//cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/highlight.min.js"></script>
-    <script src="accessible-menu.js?20191206"></script>
+    <script src="accessible-menu.min.js?20191206"></script>
     <script>
     $( document ).ready(function() {
       hljs.initHighlightingOnLoad();
